UMP-10081-template for azure package

--- a/armtemplates/v1.1.14/RS-UMS-AppServiceTemplate.json
+++ b/armtemplates/v1.1.14/RS-UMS-AppServiceTemplate.json
@@ -35,7 +35,7 @@
       "minLength": 3,
       "type": "string",
       "metadata": {
-        "description": "Storage account name for storing files the Report/User Management Server generates. The name must be between 3 to 24 characters long, and can contain only numbers and lowercase letters."
+        "description": "Storage account name for storing files the Bold Report/ Bold User Management Server generates. The name must be between 3 to 24 characters long, and can contain only numbers and lowercase letters."
       },
       "defaultValue": "storageaccountname"
     },
