web config changes

--- a/IDP/Web.config
+++ b/IDP/Web.config
@@ -51,7 +51,7 @@
       <add key="UnobtrusiveJavaScriptEnabled" value="true" />
       <add key="SystemConfigurationPath" value="\UMS\Configuration\" />
       <add key="SiteFolderPath" value="" />
-      <add key="ApplicationName" value="IdentityProvider" />
+      <add key="ApplicationName" value="Tenant Management Server" />
       <add key="AppDataPath" value="\App_Data\" />
       <add key="IsLogOptionalData" value="false" />
       <add key="owin:AppStartup" value="Syncfusion.Server.IdentityProvider.Startup, Syncfusion.Server.IdentityProvider" />
@@ -84,6 +84,10 @@
       <add key="documentation:url" value="https://documentation.boldreports.com" />
       <!--  Cloud - OnPremise usage keys ends -->
       <add key="PrivateKeysPath" value="\App_Data\Configuration\" />
+      <!--<add key="IsAzureApplication" value="true" />
+      <add key="StorageType" value="AzureBlob" />-->
+       <add key="IsAzureApplication" value="true" />
+       <add key="IdP:StorageType" value="AzureBlob" />
     </appSettings>
     <system.web>
       <authentication mode="Forms">
