--- a/Report Server/Jobs/Web.config
+++ b/Report Server/Jobs/Web.config
@@ -21,14 +21,16 @@
     <add key="scheduler:recovery_timespan_hours" value="168" />
     <add key="smtp:timeout_minutes" value="5" />
     <!-- OnPremise usage keys ends -->
-    <add key="SystemConfigurationPath" value="\..\Configuration\" />
-    <add key="ApplicationName" value="Report Server Job Scheduler" />
-    <add key="RootFolderPath" value="\..\" />
-    <add key="AppDataPath" value="\..\App_Data\" />
-    <add key="PrivateKeysPath" value="\..\..\IDP\App_Data\Configuration\" />
+    <add key="SystemConfigurationPath" value="\Configuration\" />
+    <add key="ApplicationName" value="Report Server" />
+    <add key="RootFolderPath" value="\" />
+    <add key="AppDataPath" value="\App_Data\" />
+    <add key="PrivateKeysPath" value="\IDP\App_Data\Configuration\" />
     <add key="Loggername" value="reportserverschedulejob" />
     <add key="app:branding" value="boldreports" />
     <add key="app:branding_domain" value="boldreports.com" />
+	    <add key="IsAzureApplication" value="true" />
+    <add key="StorageType" value="AzureBlob" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
