--- a/Report Server/ReportService/Web.config
+++ b/Report Server/ReportService/Web.config
@@ -10,16 +10,16 @@
   </configSections>
   <appSettings>
     <add key="AppDataPath" value="\..\App_Data\" />
-    <add key="SystemConfigurationPath" value="\..\Configuration\" />
-    <add key="log4net.Config" value="\logs\Log4Net.config" />
+    <add key="SystemConfigurationPath" value="\report server\Configuration\" />
+    <add key="log4net.Config" value="\report server\reportservice\logs\Log4Net.config" />
     <add key="UseProxyServer" value="false" />
     <add key="HostName" value="" />
     <add key="Schema" value="" />
     <add key="Port" value="" />
-    <add key="PrivateKeysPath" value="\..\..\IDP\App_Data\Configuration\" />
+    <add key="PrivateKeysPath" value="\IDP\App_Data\Configuration\" />
     <add key="JQueryCdnLink" value="" />
     <add key="ViewerCdnLink" value="" />
-    <add key="IsAzureApplication" value="false" />
+    <add key="IsAzureApplication" value="true" />
     <add key="ShapePath" value="\bin\ShapeData\" />
   </appSettings>
   <ReportingExtensions configSource="bin\ReportExtension.config" />
