--- a/Report Server/Web.config
+++ b/Report Server/Web.config
@@ -77,7 +77,7 @@
     <add key="i18n.NuggetParameterEndToken" value=")))" />
     <add key="smtpTimeOut" value="100000" />
     <!-- Cloud - OnPremise usage keys -->
-    <add key="PrivateKeysPath" value="\..\IDP\App_Data\Configuration\" />
+    <add key="PrivateKeysPath" value="\IDP\App_Data\Configuration\" />
     <add key="IsCDN" value="false" />
     <add key="CdnLink" value="/content/" />
     <add key="Loggername" value="reportserverweb" />
@@ -86,6 +86,8 @@
     <add key="app:branding" value="boldreports" />
     <add key="app:branding_domain" value="boldreports.com" />
     <add key="app:branding:boldbi_plan_id" value="7" />
+	    <add key="IsAzureApplication" value="true" />
+    <add key="StorageType" value="AzureBlob" />
     <!--  Cloud - OnPremise usage keys ends -->
     <!-- Cloud usage keys -->
     <add key="DashboardServiceResourceUrl" value="http://localhost:51777/bi/DashboardService" />
