--- a/armtemplates/v2.3.26/BoldReportsAppServiceTemplate.json
+++ b/armtemplates/v2.3.26/BoldReportsAppServiceTemplate.json
@@ -33,7 +33,7 @@
     }
   },
   "variables": {
-    "templatelink": "https://github.com/velmuruganthangaraj/bold-reports-azure/blob/master/armtemplates/v2.3.26/BoldReportsAppServiceTemplate.json"
+    "templatelink": "https://raw.githubusercontent.com/velmuruganthangaraj/bold-reports-azure/master/armtemplates/v2.3.26/BoldReportsAppServiceTemplate.json"
   },
   "resources": [
     {
