product.json file changes

--- a/reporting/api/appsettings.Production.json
+++ b/reporting/api/appsettings.Production.json
@@ -2,7 +2,7 @@
   "AppSettings": {
     //Default keys
     "SystemConfigurationPath": "/../web/configuration/",
-    "ApplicationName": "Reports Server",
+    "ApplicationName": "Report Server",
     "AppDataPath": "/../../app_data/",
     "IsDebug": "false",
     "IsLogOptionalData": "false",
