--- a/reporting/jobs/appsettings.Development.json
+++ b/reporting/jobs/appsettings.Development.json
@@ -7,7 +7,7 @@
     "ApplicationName": "Reports Server",
     "IsDebug": "true",
     "IsLogOptionalData": "true",
-    "ExtAssemblies": "BoldReports.Data.WebData;BoldReports.Data.PostgreSQL;BoldReports.Data.Csv;BoldReports.Data.Excel;BoldReports.Data.MySQL;BoldReports.Data.Oracle;BoldReports.Extensions.BarcodeCRI;",
+    "ExtAssemblies": "BoldReports.Data.WebData;BoldReports.Data.Csv;BoldReports.Data.Excel;BoldReports.Extensions.BarcodeCRI;",
     //Default keys ends 
 
     //OnPremise usage keys 
