--- a/reporting/jobs/appsettings.Production.json
+++ b/reporting/jobs/appsettings.Production.json
@@ -6,7 +6,7 @@
     "AppDataPath": "/../../app_data/",
     "IsDebug": "false",
     "IsLogOptionalData": "false",
-    "ExtAssemblies": "BoldReports.Data.WebData;BoldReports.Data.PostgreSQL;BoldReports.Data.Csv;BoldReports.Data.Excel;BoldReports.Data.MySQL;BoldReports.Data.Oracle;BoldReports.Extensions.BarcodeCRI;",
+    "ExtAssemblies": "BoldReports.Data.WebData;BoldReports.Data.Csv;BoldReports.Data.Excel;BoldReports.Extensions.BarcodeCRI;",
     //Default keys ends 
 
     //OnPremise usage keys 
