--- a/reporting/web/appsettings.Development.json
+++ b/reporting/web/appsettings.Development.json
@@ -8,7 +8,7 @@
     "EmailTemplatePath": "/../../../Base/Syncfusion.Server.Base.TemplateGenerator",
     "IsDebug": "true",
     "IsLogOptionalData": "true",
-    "ExtAssemblies": "BoldReports.Data.WebData;BoldReports.Data.PostgreSQL;BoldReports.Data.Csv;BoldReports.Data.Excel;BoldReports.Data.MySQL;BoldReports.Data.Oracle;BoldReports.Extensions.BarcodeCRI;",
+    "ExtAssemblies": "BoldReports.Data.WebData;BoldReports.Data.Csv;BoldReports.Data.Excel;BoldReports.Extensions.BarcodeCRI;",
     //Default keys ends 
 
     //OnPremise usage keys 
