--- a/idp/web/Web.config
+++ b/idp/web/Web.config
@@ -5,7 +5,7 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="dotnet" arguments=".\Syncfusion.Server.IdentityProvider.Core.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\web" hostingModel="outofprocess" />
+      <aspNetCore processPath="dotnet" arguments=".\Syncfusion.Server.IdentityProvider.Core.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\web" hostingModel="inprocess" />
       <security>
         <requestFiltering>
           <requestLimits maxQueryString="2097151" />
