--- a/reporting/api/web.config
+++ b/reporting/api/web.config
@@ -9,7 +9,7 @@
         <remove name="WebDAV" />
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="dotnet" arguments=".\Syncfusion.Server.API.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="outofprocess" />
+      <aspNetCore processPath="dotnet" arguments=".\Syncfusion.Server.API.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="outofprocess" requestTimeout="00:20:00" />
       <security>
         <requestFiltering allowDoubleEscaping="true">
         </requestFiltering>
