latest azure package changes

--- a/idp/ums/Web.config
+++ b/idp/ums/Web.config
@@ -5,7 +5,7 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="dotnet" arguments=".\Syncfusion.TenantManagement.Core.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\ums" hostingModel="outofprocess" />
+      <aspNetCore processPath="dotnet" arguments=".\Syncfusion.TenantManagement.Core.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\ums" hostingModel="outofprocess" requestTimeout="00:20:00" />
       <security>
         <requestFiltering>
           <requestLimits maxQueryString="2097151" />
