Fix maximum query string length issue

--- a/IDP/Web.config
+++ b/IDP/Web.config
@@ -128,7 +128,7 @@
       <validation validateIntegratedModeConfiguration="false" />
       <security>
         <requestFiltering>
-          <requestLimits maxAllowedContentLength="1048576000" />
+          <requestLimits maxAllowedContentLength="1048576000" maxQueryString="2097151" />
         </requestFiltering>
       </security>
       <modules runAllManagedModulesForAllRequests="true">
