feature(REPORT-387231): moved the custom template link for testing purpose

--- a/armtemplates/v6.1.50_E13672/BoldReportsAppServiceTemplate.json
+++ b/armtemplates/v6.1.50_E13672/BoldReportsAppServiceTemplate.json
@@ -33,7 +33,7 @@
     }
   },
   "variables": {
-    "templatelink": "https://raw.githubusercontent.com/boldreports/bold-reports-azure/master/armtemplates/v6.1.45/AzureBlobStorage-BoldReports.json"
+    "templatelink": "https://github.com/Alenford/bold-reports-azure/blob/REPORT-387231-custom-arm-template/armtemplates/v6.1.50_E13672/AzureBlobStorage-BoldReports.json"
   },
   "resources": [
     {
