feature(REPORT-387231): corrected the template link

--- a/armtemplates/v6.1.50_E13672/BoldReportsAppServiceTemplate.json
+++ b/armtemplates/v6.1.50_E13672/BoldReportsAppServiceTemplate.json
@@ -33,7 +33,7 @@
     }
   },
   "variables": {
-    "templatelink": "https://github.com/Alenford/bold-reports-azure/blob/REPORT-387231-custom-arm-template/armtemplates/v6.1.50_E13672/AzureBlobStorage-BoldReports.json"
+    "templatelink": "https://raw.githubusercontent.com/Alenford/bold-reports-azure/REPORT-387231-custom-arm-template/armtemplates/v6.1.50_E13672/AzureBlobStorage-BoldReports.json"
   },
   "resources": [
     {
