--- a/armtemplates/v7.1/BoldReportsAppServiceTemplate.json
+++ b/armtemplates/v7.1/BoldReportsAppServiceTemplate.json
@@ -33,7 +33,7 @@
     }
   },
   "variables": {
-    "templatelink": "https://github.com/sarulathaJSF4542/bold-reports-azure/blob/master/armtemplates/v7.1/AzureBlobStorage-BoldReports.json"
+    "templatelink": "https://raw.githubusercontent.com/sarulathaJSF4542/bold-reports-azure/master/armtemplates/v7.1/AzureBlobStorage-BoldReports.json"
   },
   "resources": [
     {
